tests/purs/failing/PolykindGeneralizationLet.out
Error found:
in module [33mMain[0m
at tests/purs/failing/PolykindGeneralizationLet.purs:14:10 - 14:26 (line 14, column 10 - line 14, column 26)

  Could not match type
  [33m       [0m
  [33m  "foo"[0m
  [33m       [0m
  with type
  [33m     [0m
  [33m  Int[0m
  [33m     [0m

while trying to match type [33mt0 "foo"[0m
  with type [33mProxy @Type Int[0m
while checking that expression [33mProxy[0m
  has type [33mProxy @Type Int[0m
in value declaration [33mtest[0m

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

